nodered/k8s/nodered-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/nodered-net1: "true"
    io.kompose.service: nodered
  name: nodered
spec:
  containers:
  - image: nodered/node-red:1.0.3-10-arm32v7
    name: nodered
    ports:
    - containerPort: 1880
    resources: {}
    securityContext:
      privileged: true
    volumeMounts:
    - mountPath: /data/.node-red
      name: nodered-claim0
  hostname: nodered
  restartPolicy: OnFailure
  volumes:
  - name: nodered-claim0
    persistentVolumeClaim:
      claimName: nodered-claim0
status: {}
