nodered/k8s/nodered-net1-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: nodered-net1
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/nodered-net1: "true"
  podSelector:
    matchLabels:
      io.kompose.network/nodered-net1: "true"
